# swach

./: .eslintignore  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .npmrc  .prettierignore  .prettierrc.js  .prettierrc.mjs  .stylelintignore  .stylelintrc.cjs  .stylelintrc.js  .stylelintrc.mjs  .template-lintrc.js  .template-lintrc.mjs  .tool-versions  .travis.yml  CHANGELOG.md  LICENSE  MIGRATION_GUIDE.md  README.md  RELEASE.md  WARP.md  add-osx-cert.sh  add-windows-cert.ps1  babel.config.json  babel.config.mjs  ember-cli-build.js  eslint.config.mjs  forge.config.ts  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  snapcraft.yaml  supabase-schema.sql  tailwind.config.js  testem-electron.cjs  (+8 more)
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  electron.yml  ember.yml  lint.yml  main.yml  release.yml  rust-tests.yml
app/: app.js  app.ts  deprecation-workflow.ts  index.html  router.js  router.ts  sentry.js  transitions.js
app/adapters/: application.js
app/authenticators/: cognito.js  supabase.js  supabase.ts
app/components/: about.gts  about.hbs  about.ts  alpha-input.gts  alpha-input.ts  animated-drag-sort-list.gts  animated-drag-sort-list.hbs  animated-drag-sort-list.js  animated-drag-sort-list.ts  animated-outlet.hbs  animated-outlet.js  animated-outlet.ts  color-picker.gts  color-picker.hbs  color-picker.js  color-picker.ts  color-row.gts  color-row.hbs  color-row.js  color-row.ts  colors-list.gts  colors-list.hbs  colors-list.js  colors-list.ts  context-menu-item.hbs  context-menu-item.js  context-menu.hbs  context-menu.js  context-menu.ts  contrast-checker.gts  contrast-checker.hbs  contrast-checker.js  contrast-checker.ts  edit-selected-color.gts  edit-selected-color.hbs  edit-selected-color.js  edit-selected-color.ts  ember-load-remover.js  forgot-password.gts  forgot-password.ts  (+47 more)
app/config/: environment.d.ts  environment.ts
app/controllers/: application.js  application.ts  color-manager.js  colors.js  colors.ts  contrast.js  contrast.ts  index.js  kuler.ts  palettes.js  palettes.ts  settings.js  settings.ts  signup.js  welcome.js  welcome.ts
app/data-buckets/: main.js
app/data-models/: color.js  color.ts  palette.js  palette.ts  user.js
app/data-sources/: backup.js  backup.ts  mirage.js  mirage.ts  remote.js  remote.ts
app/data-strategies/: event-logging.js  mirage-store-sync.js  remote-queryfail.js  remote-store-sync.js  remote-updatefail.js  store-backup-sync.js  store-backup-sync.ts  store-beforequery-mirage-query.js  store-beforequery-remote-query.js  store-beforeupdate-mirage-update.js  store-beforeupdate-remote-update.js
app/helpers/: capitalize.ts  html-safe.ts
app/initializers/: ember-data-change-tracker.js  main-bucket-initializer.js
app/models/: color.js  palette.js  settings.js
app/routes/: application.js  application.ts  color-manager.js  colors.js  colors.ts  contrast.js  contrast.ts  index.js  index.ts  kuler.js  kuler.ts  palettes.js  palettes.ts  settings.js  signup.js  welcome.js
app/serializers/: application.js
app/services/: action-manager.js  cognito.js  color-utils.js  color-utils.ts  context-menu.js  data.ts  nearest-color.js  nearest-color.ts  session.js  session.ts  supabase.ts  undo-manager.js  undo-manager.ts
app/session-stores/: application.ts
config/: content-security-policy.js  deprecation-workflow.js  ember-cli-update.json  environment.d.ts  environment.js  targets.js
docs/: PERFORMANCE.md  PIXEL_SAMPLER.md  SUPABASE_MIGRATION.md  SUPABASE_MIGRATION_VERIFICATION.md  TESTING_THE_SAMPLER.md
electron-app/: .gitignore  config.forge.js  example.sentry.properties  forge.config.js  forge.config.ts  main.ts  package.json  sentry-symbols.js  sentry.properties  test-path.js  tsconfig.json
electron-app/magnifier/rust-sampler/: Cargo.toml  PATCHES.md  README.md  WAYLAND_PIPEWIRE_STATUS.md  build.rs
electron-app/magnifier/rust-sampler/patches/: libspa-modifier-i64.patch
electron-app/magnifier/rust-sampler/src/: lib.rs  main.rs  types.rs
electron-app/magnifier/rust-sampler/src/sampler/: linux.rs  macos.rs  mod.rs  wayland_portal.rs  windows.rs
electron-app/magnifier/rust-sampler/tests/: command_processing_tests.rs  linux_sampler_tests.rs  macos_sampler_tests.rs  sampler_tests.rs  windows_sampler_tests.rs
ember-electron/: electron-forge-config.js  main.js  preload.js
lib/: test-runner.js
magnifier-renderer/: index.html  styles.css  tsconfig.json
mirage/: config.js
patches/: electron-installer-snap.patch  ember-inputmask@0.11.0.patch  ember-local-storage.patch  ember-orbit.patch  menubar.patch  object-inspect.patch
rust-sampler/: .gitignore  Cargo.toml  README.md  WAYLAND_PIPEWIRE_STATUS.md
rust-sampler/src/: main.rs  types.rs
rust-sampler/src/sampler/: linux.rs  macos.rs  macos.rs204,204c  macos.rs32,150c  mod.rs  wayland.rs  wayland_portal.rs  windows.rs
rust-sampler/tests/: types_tests.rs
scripts/: view-perf-logs.sh
tests/: helpers.js  helpers.ts  index.html  test-helper.js  test-helper.ts
types/: global.d.ts
(+359 files in other folders)
