[package]
name = "swach-sampler"
version = "0.1.0"
edition = "2021"

[features]
# Enable Wayland support by default on Linux for PipeWire screencast with persistent tokens
default = ["wayland"]
# Wayland support (requires system libraries: libpipewire-0.3-dev)
wayland = ["ashpd", "pipewire", "tokio", "futures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional dependencies for Wayland support (enabled by default via "wayland" feature)
ashpd = { version = "0.9", optional = true }
pipewire = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# X11 support for direct pixel sampling (always available on Linux)
x11 = { version = "2.21", features = ["xlib"] }
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
