[package]
name = "swach-sampler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swach-sampler"
path = "src/main.rs"

[lib]
name = "swach_sampler"
path = "src/lib.rs"

[features]
# X11 support (requires system libraries: libx11-dev on Linux)
x11 = ["dep:x11", "dep:dirs"]
# Wayland support (requires system libraries: libpipewire-0.3-dev on Linux)
wayland = ["dep:ashpd", "dep:pipewire", "dep:tokio", "dep:futures"]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# X11 support for direct pixel sampling (optional, requires libx11-dev)
x11 = { version = "2.21", features = ["xlib"], optional = true }
dirs = { version = "5.0", optional = true }
# Optional dependencies for Wayland support (requires libpipewire-0.3-dev)
ashpd = { version = "0.9", optional = true }
# Using git version to get FFI bindings compatible with newer PipeWire versions
# The 0.9.x crates.io versions have hardcoded struct layouts that don't match newer system libraries
# Pinned to specific commit for reproducible builds
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", rev = "b23847892822352f4a98b1cbc61746e9160ad010", optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
futures = { version = "0.3", optional = true }

[build-dependencies]
glob = "0.3"

[package.metadata.patch.libspa]
version = "0.9"
patches = [
    "patches/libspa-modifier-i64.patch"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
